rules.v4
# Generated by iptables-save v1.8.7 on Fri Nov 18 17:05:36 2022
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -i wlan0 -p udp -m udp --dport 22 -m comment --comment nordvpn -j ACCEPT
-A INPUT -i wlan0 -p udp -m udp --sport 22 -m comment --comment nordvpn -j ACCEPT
-A INPUT -i eth0 -p udp -m udp --dport 22 -m comment --comment nordvpn -j ACCEPT
-A INPUT -i eth0 -p udp -m udp --sport 22 -m comment --comment nordvpn -j ACCEPT
-A INPUT -i wlan0 -p tcp -m tcp --dport 22 -m comment --comment nordvpn -j ACCEPT
-A INPUT -i wlan0 -p tcp -m tcp --sport 22 -m comment --comment nordvpn -j ACCEPT
-A INPUT -i eth0 -p tcp -m tcp --dport 22 -m comment --comment nordvpn -j ACCEPT
-A INPUT -i eth0 -p tcp -m tcp --sport 22 -m comment --comment nordvpn -j ACCEPT
-A INPUT -i wlan0 -m connmark --mark 0xe1f1 -m comment --comment nordvpn -j ACCEPT
-A INPUT -i eth0 -m connmark --mark 0xe1f1 -m comment --comment nordvpn -j ACCEPT
-A INPUT -i wlan0 -m comment --comment nordvpn -j DROP
-A INPUT -i eth0 -m comment --comment nordvpn -j DROP
-A OUTPUT -o wlan0 -p udp -m udp --dport 22 -m comment --comment nordvpn -j ACCEPT
-A OUTPUT -o wlan0 -p udp -m udp --sport 22 -m comment --comment nordvpn -j ACCEPT
-A OUTPUT -o eth0 -p udp -m udp --dport 22 -m comment --comment nordvpn -j ACCEPT
-A OUTPUT -o eth0 -p udp -m udp --sport 22 -m comment --comment nordvpn -j ACCEPT
-A OUTPUT -o wlan0 -p tcp -m tcp --dport 22 -m comment --comment nordvpn -j ACCEPT
-A OUTPUT -o wlan0 -p tcp -m tcp --sport 22 -m comment --comment nordvpn -j ACCEPT
-A OUTPUT -o eth0 -p tcp -m tcp --dport 22 -m comment --comment nordvpn -j ACCEPT
-A OUTPUT -o eth0 -p tcp -m tcp --sport 22 -m comment --comment nordvpn -j ACCEPT
-A OUTPUT -o wlan0 -m mark --mark 0xe1f1 -m comment --comment nordvpn -j CONNMARK --save-mark --nfmask 0xffffffff --ctmask 0xffffffff
-A OUTPUT -o wlan0 -m connmark --mark 0xe1f1 -m comment --comment nordvpn -j ACCEPT
-A OUTPUT -o eth0 -m mark --mark 0xe1f1 -m comment --comment nordvpn -j CONNMARK --save-mark --nfmask 0xffffffff --ctmask 0xffffffff
-A OUTPUT -o eth0 -m connmark --mark 0xe1f1 -m comment --comment nordvpn -j ACCEPT
-A OUTPUT -o wlan0 -m comment --comment nordvpn -j DROP
-A OUTPUT -o eth0 -m comment --comment nordvpn -j DROP
COMMIT
# Completed on Fri Nov 18 17:05:36 2022
# Generated by iptables-save v1.8.7 on Fri Nov 18 17:05:36 2022
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A POSTROUTING -o nordlynx -j MASQUERADE
COMMIT
# Completed on Fri Nov 18 17:05:36 2022
